discarded/ts-type-checker/environment/visible_tests/circularTypeArgumentsLocalAndOuterNoCrash1.errors
circularTypeArgumentsLocalAndOuterNoCrash1.ts(9,12): error TS4109: Type arguments for 'NumArray' circularly reference themselves.
